# fy

./: .dmypy.json  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  fy.sh  index.html  local.fy.sh  mypy.ini  pyproject.toml  testing.fy
.github/workflows/: mkdocs.yml  pre-commit.yaml  pypi.yaml  python_version_tests.yaml  test.yaml
cli/: README.md  pyproject.toml
cli/src/fy_cli/: main.py
core/: README.md  mypy.ini  pyproject.toml
core/src/fy_core/: __init__.py
docs/: README.md  mkdocs.yml  pyproject.toml
docs/docs/: index.md  reference.md
docs/docs/tutorial/method2/: flow_using_method.md
documentation_site/: README.md  mkdocs.yml  pyproject.toml
documentation_site/docs/: flow_reference.md  index.md  property_reference.md
documentation_site/docs/getting_started/: installation.md  project_structure.md
documentation_site/docs/introduction/: background.md  benefits.md  comparisons.md  example.md  explained.md  summary.md
documentation_site/docs/reference/: flow.md  method.md  property.md
documentation_site/docs/reference/Property/: property.md  property_in_flow.md
documentation_site/docs/tutorial/: flow_using_method.md  flow_using_property.md  property.md
documentation_site/docs/tutorial/Property/: flow_using_property.md  property_in_flow.md
documentation_site/docs/tutorial/flow/: flow.md
documentation_site/docs/tutorial/method/: flow_includes_method.md  flow_using_method.md  method.md  methods_using_properties.md
documentation_site/docs/tutorial/method2/: flow_using_method.md  method.md  methods_using_properties.md
documentation_site/docs/tutorial/property/: property.md  property_in_flow.md  property_with_property.md  setters.md
documentation_site/docs/tutorial/property2/: flow_using_property.md  property.md  property_in_flow.md  property_with_property.md  setters.md
documentation_site/site/: 404.html  index.html
documentation_site/site/getting_started/installation/: index.html
documentation_site/site/getting_started/project_structure/: index.html
documentation_site/site/search/: search_index.json
documentation_site/site/tutorial/flow/flow/: index.html
documentation_site/site/tutorial/method/flow_includes_method/: index.html
documentation_site/site/tutorial/method/method/: index.html
documentation_site/site/tutorial/method/methods_using_properties/: index.html
documentation_site/site/tutorial/property/property/: index.html
documentation_site/site/tutorial/property/property_in_flow/: index.html
documentation_site/site/tutorial/property/property_with_property/: index.html
documentation_site/site/tutorial/property/setters/: index.html
fy/: main.py  testing.py
getting_started/installation/: index.html
getting_started/project_structure/: index.html
introduction/background/: index.html
introduction/benefits/: index.html
introduction/comparisons/: index.html
introduction/example/: index.html
introduction/explained/: index.html
introduction/summary/: index.html
search/: search_index.json
src/base/: execution_flow_base.py
src/domain/: flow_template_model.py
src/mixins/property/folder_to_parse/: abc.py  using_setter.py
src/mixins/property/fy_files_to_parse/: using_files_discovery.py
templates/: flow.jinja2
tests/test_fy_files/hello_world/: hello_world.fy
tutorial/flow/flow/: index.html
tutorial/method/flow_includes_method/: index.html
tutorial/method/method/: index.html
tutorial/method/methods_using_properties/: index.html
tutorial/property/property/: index.html
tutorial/property/property_in_flow/: index.html
tutorial/property/property_with_property/: index.html
tutorial/property/setters/: index.html
