[tool.poetry]
name = "fy"
version = "0.1.0"
description = ""
authors = ["PerisicJere <jereperisic@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

jinja2 = "3.1.4"
pydantic = "2.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
