[tool.poetry]
name = "fy"
version = "0.1.0"
description = ""
authors = ["vinkobuble <vinkobuble@gmail.com>","PerisicJere <jereperisic@icloud.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"

jinja2 = "3.1.4"
pydantic = "2.8.2"
base = "^0.0.0"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "9.5.31"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
