[tool.poetry]
name = "fy_tool_cli"
version = "0.2.15-dev"
description = ""
authors = ["Vinko Buble <vinkobuble@gmail.com>","Jere Perisic <jereperisic@icloud.com>"]
readme = "README.md"

[tool.poetry.scripts]
fy = "fy_tool_cli.main:fy_cli"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

fy-library = { path = "../library", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
