[tool.poetry]
name = "fy_documentation"
version = "0.1.0"
description = ""
authors = ["Vinko Buble <vinkobuble@gmail.com>","Jere Perisic <jereperisic@icloud.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
mkdocs-material = "9.5.31"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
